--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,21 @@
+# Database
 POSTGRES_SERVER=postgis
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=cofrade360
 
+# Redis
 REDIS_HOST=redis
 REDIS_PORT=6379
 
+# MinIO
 MINIO_ENDPOINT=minio:9000
 MINIO_ACCESS_KEY=minioadmin
 MINIO_SECRET_KEY=minioadmin
 MINIO_BUCKET=cofrade360
+
+# Security (CHANGE IN PRODUCTION!)
+SECRET_KEY=your-secret-key-change-in-production-min-32-chars-please-use-openssl-rand-hex-32
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
