--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,14 @@ pydantic==2.5.3
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
+# Security
+bcrypt>=4.0
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+email-validator>=2.0.0
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
 httpx==0.26.0
+pydantic-settings>=2.0
