--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -9,10 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_localizations:
+    sdk: flutter
   
   # State Management
-  flutter_riverpod: ^2.4.9
-  riverpod_annotation: ^2.3.3
+  flutter_riverpod: ^3.1.0
+  riverpod_annotation: ^4.0.0
   
   # UI
   cupertino_icons: ^1.0.6
@@ -24,22 +27,23 @@ dependencies:
   
   # Local Storage
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^10.0.0
   
   # Utils
   dartz: ^0.10.1
   equatable: ^2.0.5
-  intl: ^0.18.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   
-  flutter_lints: ^3.0.1
+  flutter_lints: ^6.0.0
   
   # Code Generation
   build_runner: ^2.4.7
-  riverpod_generator: ^2.3.9
-  retrofit_generator: ^8.0.4
+  riverpod_generator: ^4.0.0+1
+  retrofit_generator: ^10.2.1
   json_serializable: ^6.7.1
   
   # Testing
